--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -3,32 +3,31 @@
     src: url("../../assets/fonts/Raleway-Regular.ttf");
 }
 
-body {
+.body-style {
+    overflow: hidden;
+}
+
+.login-wrapper {
     display: flex; 
     align-items: center;   
     justify-content: center; 
     height: 100vh;
-    overflow: hidden;
 }
 
 .login {
     display: flex;
     flex-direction: row;
-    gap: 53px;
+    gap: 23px;
     justify-content: center;
-    
-}
-
-.login-illustration {
-    width: 40%;
 }
 
 .login-component {
     display: flex;
     flex-direction: column;
     justify-self: center;
-    gap: 24px;
-    width: 622px;
+    gap: 48px;
+    width: 562px;
+    padding: 45px 30px;
 }
 
 .login-component-header {
@@ -37,6 +36,24 @@ body {
     font-family: Raleway-Regular;
     color: #3A3A3A;
     align-self: center;
+}
+
+.inputs {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.login-component-form {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
 }
 
 .remember-me-container {
@@ -51,4 +68,10 @@ body {
     font-size: 14px;
     font-family: Raleway-Regular;
     color: #949494;
+}
+
+.language-switch {
+    position: absolute;
+    top: 40px;
+    right: 80px;
 }
