--- a/src/ui components/BasicButton/BasicButton.css
+++ b/src/ui components/BasicButton/BasicButton.css
@@ -1,10 +1,5 @@
-@font-face {
-    font-family: "Roboto-Regular";
-    src: url("../../assets/fonts/Roboto-Regular.ttf");
-}
-
 .basic-button {
-    width: 100%;
+    width: inherit;
     height: 49px;
     border: none;
     border-radius: 8px;
@@ -14,6 +9,7 @@
     font-size: 16px;
     font-weight: 400;
     font-family: Roboto-Regular;
+    padding: 15px 40px;
 
     &:hover {
         background-color: #002FEA;
