--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,31 @@
 @font-face {
     font-family: "Roboto-Regular";
-    src: url("../../assets/fonts/Roboto-Regular.ttf");
+    src: url("./assets/fonts/Roboto-Regular.ttf");
+}
+
+@font-face {
+    font-family: "Roboto-Medium";
+    src: url("./assets/fonts/Roboto-Medium.ttf");
 }
 
 @font-face {
     font-family: "Raleway-Regular";
-    src: url("../../assets/fonts/Raleway-Regular.ttf");
+    src: url("./assets/fonts/Raleway-Regular.ttf");
+}
+
+@font-face {
+    font-family: "Raleway-Medium";
+    src: url("./assets/fonts/Raleway-Medium.ttf");
 }
 
 body {
     margin: 0;
+}
+
+#root {
+    display: flex;
+}
+
+.app-content {
+    padding-left: 82px;
 }
