--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -1,8 +1,3 @@
-@font-face {
-    font-family: "Raleway-Regular";
-    src: url("../../assets/fonts/Raleway-Regular.ttf");
-}
-
 .body-style {
     overflow: hidden;
 }
@@ -31,9 +26,8 @@
 }
 
 .login-component-header {
-    font-weight: 500;
     font-size: 40px;
-    font-family: Raleway-Regular;
+    font-family: Raleway-Medium;
     color: #3A3A3A;
     align-self: center;
 }
@@ -74,4 +68,52 @@
     position: absolute;
     top: 40px;
     right: 80px;
+}
+
+@media only screen and (max-width: 376px) {
+    .language-switch {
+        position: absolute;
+        top: 19px;
+        right: 16px;
+    }
+
+    .login-wrapper {
+        display: flex;
+        width: 100vw;
+        justify-content: center;
+        padding: 0 36px;
+    }
+
+    .login {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .login-illustration {
+        width: 100%;
+        height: auto;
+
+    }
+
+    .login-component {
+        display: flex;
+        width: 100%;
+        height: auto;
+        justify-content: center;
+        align-self: center;
+        padding: 0 0;
+        gap: 30px;
+    }
+
+    .login-component-form {
+        gap: 20px;
+    }
+
+    .login-component-header {
+        font-size: 26px;
+    }
 }
