--- a/src/ui components/BasicInput/BasicInput.css
+++ b/src/ui components/BasicInput/BasicInput.css
@@ -1,20 +1,10 @@
-@font-face {
-    font-family: "Roboto-Regular";
-    src: url("../../assets/fonts/Roboto-Regular.ttf");
-}
-
-@font-face {
-    font-family: "Raleway-Regular";
-    src: url("../../assets/fonts/Raleway-Regular.ttf");
-}
-
 .basic-input-container {
     display: flex;
     flex-direction: column;
     gap: 4px;
     width: 100%;
     height: 56px;
-    font-family: Raleway-Regular;
+    font-family: Raleway-Medium;
 
     &:hover {
         .basic-input-label {
@@ -34,7 +24,6 @@
     &:active {
         .basic-input-label {
             font-size: 12px;
-            font-weight: 400;
             font-family: Roboto-Regular;
             transition: all 0.2s ease;
         }
@@ -46,8 +35,7 @@
     margin-left: 10px;
     margin-top: -8px;
     font-size: 14px;
-    font-weight: 500;
-    font-family: inherit;
+    font-family: Raleway-Medium;
     color: #9D9D9D;
     background-color: #fff;
     padding: 0 4px;
