--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -64,7 +64,7 @@
     color: #949494;
 }
 
-.language-switch {
+.login-page-language-switch {
     position: absolute;
     top: 40px;
     right: 80px;
