На странице профиля добавлены адаптивная верстка, уведомления

--- a/src/ui components/NotificationPopup/NotificationPopup.css
+++ b/src/ui components/NotificationPopup/NotificationPopup.css
@@ -2,7 +2,7 @@
     width: 260px;
     height: auto;
     border-radius: 8px;
-    position: absolute;
+    position: fixed;
     bottom: 20px;
     right: 20px;
     z-index: 3;
@@ -106,7 +106,6 @@
 @media only screen and (max-width: 376px) {
     .popup-container {
         width: 200px;
-        position: absolute;
         top: 10px;
         left: 10px;
         animation: slide-mobile 0.3s ease-out;
