--- a/src/pages/ProfilePage/ProfilePage.css
+++ b/src/pages/ProfilePage/ProfilePage.css
@@ -7,7 +7,7 @@
 }
 
 .profile-header-name {
-    font-size: 30px;
+    font-size: 40px;
     font-family: Raleway-Medium;
     color: #3A3A3A;
 }
@@ -28,4 +28,29 @@
     font-size: 32px;
     font-family: Raleway-Medium;
     color: #3A3A3A;
+}
+
+@media (max-width: 1200px) {
+    .profile-header {
+        padding: 20px 10px;
+    }
+}
+
+@media (max-width: 600px) {
+    .app-content {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .profile-content {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .profile-activity-navigation {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
 }
