--- a/src/ui components/EducationCard/EducationCard.css
+++ b/src/ui components/EducationCard/EducationCard.css
@@ -44,3 +44,9 @@
     grid-template-columns: 1fr 1fr;
     align-items: center;
 }
+
+@media (max-width: 900px) {
+    .education-card {
+        width: 400px;
+    }
+}
