--- a/src/pages/ProfilePage/ProfilePage.css
+++ b/src/pages/ProfilePage/ProfilePage.css
@@ -19,6 +19,11 @@
     gap: 20px;
 }
 
+.profile-activity-navigation {
+    display: flex;
+    flex-direction: row;
+}
+
 .profile-activity {
     display: flex;
     flex-direction: column;
@@ -44,12 +49,6 @@
     }
 
     .profile-content {
-        flex-direction: column;
-        gap: 10px;
-    }
-
-    .profile-activity-navigation {
-        display: flex;
         flex-direction: column;
         gap: 10px;
     }
