--- a/src/ui components/PersonalityCard/PersonalityUnit/PersonalityUnit.css
+++ b/src/ui components/PersonalityCard/PersonalityUnit/PersonalityUnit.css
@@ -8,10 +8,12 @@
     font-size: 14px;
     font-family: Raleway-Medium;
     color: #666666;
+    font-variant-numeric: lining-nums;
 }
 
 .personality-unit-text {
     font-size: 16px;
     font-family: Raleway-Medium;
     color: #3A3A3A;
+    font-variant-numeric: lining-nums;
 }
