--- a/src/pages/CertificatesPage/CertificatesPage.css
+++ b/src/pages/CertificatesPage/CertificatesPage.css
@@ -1,9 +1,13 @@
+.certificates-page {
+    display: flex;
+}
+
 .certificates-page-header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 25px 0px;
+    padding: 25px 30px 25px 0px;
 }
 
 .certificates-header-name {
@@ -15,18 +19,16 @@
 .certificates-page-path {
     display: flex;
     flex-direction: row;
+    font-family: Roboto-Regular;
+    font-size: 14px;
 }
 
 .certificates-page-path-main {
-    font-size: 14px;
-    font-family: Raleway-Medium;
     color: #3A3A3A;
     cursor: pointer;
 }
 
 .certificates-page-path-certificate-order {
-    font-size: 14px;
-    font-family: Raleway-Medium;
     color: #375FFF;
     cursor: default;
 }
@@ -38,7 +40,7 @@
 }
 
 .certificates-user-role-navigation {
-    padding: 20px 0px;
+    padding: 20px 25px;
 }
 
 .certificates-user-role-navigation-item {
