--- a/src/pages/ProfilePage/ProfilePage.css
+++ b/src/pages/ProfilePage/ProfilePage.css
@@ -1,9 +1,13 @@
+.profile-page {
+    display: flex;
+}
+
 .profile-header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 25px 0px;
+    padding: 25px 30px 25px 0px;
 }
 
 .profile-header-name {
