--- a/src/pages/UsefulServicesPage/UsefulServicesPage.css
+++ b/src/pages/UsefulServicesPage/UsefulServicesPage.css
@@ -37,3 +37,54 @@
     width: 80%;
     margin-top: 10px;
 }
+
+.useful-services-content {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.pagination-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    gap: 24px;
+}
+
+.pagination-btn {
+    cursor: pointer;
+    background: none;
+    border: none;
+
+    font-size: 18px;
+    user-select: none;
+}
+
+.pagination-btn.active,
+.pagination-btn:disabled {
+    color: #861F41;
+}
+
+.pagination-arrow {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.pagination-arrow:disabled {
+    background: #f0f0f0;
+    color: #bdbdbd;
+}
+
+.pagination-pages {
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+}
+
+.pagination-dots {
+    padding: 0 8px;
+    font-size: 18px;
+    user-select: none;
+}
