--- a/src/pages/EventsPage/EventsPage.css
+++ b/src/pages/EventsPage/EventsPage.css
@@ -36,12 +36,91 @@
 }
 
 .events-page-content {
-    width: 80%;
     margin-top: 10px;
 }
 
 .events-content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    width: 100%;
+}
+
+.events-page .pagination-btn.active-blue,
+.events-page .pagination-btn:disabled {
+    color: #375FFF;
+}
+
+.events-page-search-container {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 12px;
+    padding: 28px 32px;
+}
+
+.events-page-search-container-label {
+    font-size: 20px;
+    font-family: Raleway-Medium;
+    color: #3A3A3A;
+}
+
+.events-page-search-container-name {
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+
+    .basic-button {
+        width: 20%;
+    }
+}
+
+.events-page-search-container-date {
+    width: 32%;
+}
+
+@media (max-width: 900px) {
+    .events-content {
+        .event-short-card {
+            flex-direction: column;
+
+            .event-short-card-picture {
+                justify-content: center;
+            }
+        }
+    }
+
+    .app-content {
+        padding-left: 30px;
+    }
+}
+
+@media (max-width: 600px) {
+    .events-page-search-container-name {
+        .basic-button {
+            width: 100%;
+        }
+    }
+
+    .events-page-search-container-date {
+        width: 100%;
+    }
+
+    .events-content {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .event-short-card-content-info {
+        flex-direction: row!important;
+    }
+
+    .event-short-card-content-info-finished {
+        height: fit-content;
+    }
+}
+
+@media (max-width: 375px) {
+    .events-page-search-container-name {
+        flex-direction: column;
+    }
 }
