--- a/src/pages/UsefulServicesPage/UsefulServicesPage.css
+++ b/src/pages/UsefulServicesPage/UsefulServicesPage.css
@@ -48,7 +48,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
+    margin: 20px 0;
     gap: 24px;
 }
 
@@ -61,8 +61,8 @@
     user-select: none;
 }
 
-.pagination-btn.active,
-.pagination-btn:disabled {
+.useful-services-page .pagination-btn.active-red,
+.useful-services-page .pagination-btn:disabled {
     color: #861F41;
 }
 
