--- a/src/ui components/BasicButton/BasicButton.css
+++ b/src/ui components/BasicButton/BasicButton.css
@@ -6,9 +6,9 @@
     cursor: pointer;
     color: white;
     font-size: 16px;
-    font-weight: 400;
     font-family: Roboto-Regular;
     padding: 15px 25px;
+    text-transform: uppercase;
 
     &:hover {
         background-color: #002FEA;
