--- a/src/ui components/BasicInput/BasicInput.css
+++ b/src/ui components/BasicInput/BasicInput.css
@@ -77,6 +77,7 @@
     background: transparent;
     padding: 4px 0;
     width: 100%;
+    font-variant-numeric: lining-nums;
 }
 
 .basic-input::placeholder {
