--- a/src/ui components/EventShortCard/EventShortCard.css
+++ b/src/ui components/EventShortCard/EventShortCard.css
@@ -6,6 +6,8 @@
 }
 
 .event-short-card-picture {
+    display: flex;
+    align-items: center;
     img {
         width: 175px;
         border-radius: 8px;
