--- a/src/ui components/CertificateStatus/CertificateStatus.css
+++ b/src/ui components/CertificateStatus/CertificateStatus.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 16px;
+    font-size: var(--font-size-md);
     font-family: Raleway-SemiBold;
     color: #F9F9F9;
     border-radius: 8px;
