--- a/src/ui components/EventShortCard/EventShortCard.css
+++ b/src/ui components/EventShortCard/EventShortCard.css
@@ -21,9 +21,9 @@
 }
 
 .event-short-card-content-title {
-    font-size: 20px;
+    font-size: var(--font-size-xl);
     font-family: Raleway-Medium;
-    color: #3A3A3A;
+    color: var(--color-grey);
     font-variant-numeric: lining-nums;
 }
 
@@ -39,7 +39,7 @@
     color: #F9F9F9;
     border-radius: 8px;
     width: fit-content;
-    font-size: 16px;
+    font-size: var(--font-size-md);
     font-family: Raleway-Semibold;
 }
 
@@ -50,14 +50,14 @@
 }
 
 .event-short-card-content-info-label {
-    font-size: 14px;
+    font-size: var(--font-size-sm);
     font-family: Raleway-Medium;
-    color: #666666;
+    color: var(--color-lgrey);
 }
 
 .event-short-card-content-info-text {
-    font-size: 16px;
+    font-size: var(--font-size-md);
     font-family: Raleway-Medium;
-    color: #3A3A3A;
+    color: var(--color-grey);
     font-variant-numeric: lining-nums;
 }
