--- a/src/ui components/RedirectionButton/RedirectionButton.css
+++ b/src/ui components/RedirectionButton/RedirectionButton.css
@@ -5,13 +5,13 @@
     gap: 8px;
     padding: 6px 12px;
     border-radius: 8px;
-    background-color: #375fff;
+    background-color: var(--primary-color);
     color: #fff;
     width: fit-content;
     cursor: pointer;
 }
 
 .redirection-button-text {
-    font-size: 14px;
+    font-size: var(--font-size-sm);
     font-family: Roboto-Regular;
 }
