--- a/src/pages/EventsPage/EventsPage.css
+++ b/src/pages/EventsPage/EventsPage.css
@@ -11,9 +11,9 @@
 }
 
 .events-header-name {
-    font-size: 40px;
+    font-size: var(--font-size-xxxxl);
     font-family: Raleway-Medium;
-    color: #3A3A3A;
+    color: var(--color-grey);
 }
 
 .header-right-section {
@@ -26,12 +26,12 @@
 .events-page-path {
     display: flex;
     flex-direction: row;
-    font-size: 14px;
+    font-size: var(--font-size-sm);
     font-family: Roboto-Regular;
 }
 
 .events-page-path-main {
-    color: #375FFF;
+    color: var(--primary-color);
     cursor: pointer;
 }
 
@@ -48,7 +48,7 @@
 
 .events-page .pagination-btn.active-blue,
 .events-page .pagination-btn:disabled {
-    color: #375FFF;
+    color: var(--primary-color);
 }
 
 .events-page-search-container {
@@ -59,9 +59,9 @@
 }
 
 .events-page-search-container-label {
-    font-size: 20px;
+    font-size: var(--font-size-xl);
     font-family: Raleway-Medium;
-    color: #3A3A3A;
+    color: var(--color-grey);
 }
 
 .events-page-search-container-name {
