--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -26,9 +26,9 @@
 }
 
 .login-component-header {
-    font-size: 40px;
+    font-size: var(--font-size-xxxxl);
     font-family: Raleway-Medium;
-    color: #3A3A3A;
+    color: var(--color-grey);
     align-self: center;
 }
 
@@ -58,8 +58,7 @@
 }
 
 .remember-me-text {
-    font-weight: 500;
-    font-size: 14px;
+    font-size: var(--font-size-sm);
     font-family: Raleway-Regular;
     color: #949494;
 }
@@ -108,6 +107,6 @@
     }
 
     .login-component-header {
-        font-size: 26px;
+        font-size: var(--font-size-xxl);
     }
 }
