--- a/src/pages/ProfilePage/ProfilePage.css
+++ b/src/pages/ProfilePage/ProfilePage.css
@@ -11,9 +11,9 @@
 }
 
 .profile-header-name {
-    font-size: 40px;
+    font-size: var(--font-size-xxxxl);
     font-family: Raleway-Medium;
-    color: #3A3A3A;
+    color: var(--color-grey);
 }
 
 .profile-content {
@@ -34,9 +34,9 @@
 }
 
 .profile-activity-username {
-    font-size: 32px;
+    font-size: var(--font-size-xxxl);
     font-family: Raleway-Medium;
-    color: #3A3A3A;
+    color: var(--color-grey);
 }
 
 @media (max-width: 1200px) {
