--- a/src/ui components/EducationCard/EducationCard.css
+++ b/src/ui components/EducationCard/EducationCard.css
@@ -14,9 +14,9 @@
 }
 
 .education-card-education-level, .education-card-education-status {
-    font-size: 16px;
+    font-size: var(--font-size-md);
     font-family: Roboto-Medium;
-    color: #3A3A3A;
+    color: var(--color-grey);
 }
 
 .education-card-status-and-arrow {
