--- a/src/ui components/EmployeePostCard/EmployeePostCard.css
+++ b/src/ui components/EmployeePostCard/EmployeePostCard.css
@@ -14,9 +14,9 @@
 }
 
 .employee-post-card-post-name {
-    font-size: 16px;
+    font-size: var(--font-size-md);
     font-family: Roboto-Medium;
-    color: #3A3A3A;
+    color: var(--color-grey);
 }
 
 .employee-post-card-info {
