--- a/src/ui components/EmployeePostExpCard/EmployeePostExpCard.css
+++ b/src/ui components/EmployeePostExpCard/EmployeePostExpCard.css
@@ -14,9 +14,9 @@
 }
 
 .employee-post-exp-card-header-text {
-    font-size: 16px;
+    font-size: var(--font-size-md);
     font-family: Roboto-Medium;
-    color: #3A3A3A;
+    color: var(--color-grey);
 }
 
 .employee-post-exp-card-info {
