--- a/src/ui components/ImageCropModal/ImageCropModal.css
+++ b/src/ui components/ImageCropModal/ImageCropModal.css
@@ -25,16 +25,16 @@
 
 .select-file-modal-header {
   display: flex;
-  font-size: 20px;
+  font-size: var(--font-size-xl);
   font-family: Raleway-Medium;
-  color: #3A3A3A;
+  color: var(--color-grey);
   justify-self: center;
 }
 
 .select-file-modal-subheader {
-  font-size: 16px;
+  font-size: var(--font-size-md);
   font-family: Raleway-Medium;
-  color: #3A3A3A;
+  color: var(--color-grey);
 }
 
 .crop-controls {
@@ -46,9 +46,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 14px;
+  font-size: var(--font-size-sm);
   font-family: Raleway-Regular;
-  color: #3A3A3A;
+  color: var(--color-grey);
 }
 
 .crop-controls input[type="range"] {
