--- a/src/ui components/LanguageSwitch/LanguageSwitch.css
+++ b/src/ui components/LanguageSwitch/LanguageSwitch.css
@@ -14,10 +14,9 @@
     align-items: center;
     justify-content: flex-end;
     gap: 8px;
-    font-size: 16px;
-    font-weight: 400;
+    font-size: var(--font-size-md);
     font-family: Roboto-Regular;
-    color: #3A3A3A;
+    color: var(--color-grey);
     cursor: pointer;
 }
 
@@ -42,10 +41,9 @@
     top: 100%;
     left: 0;
     right: 0;
-    font-size: 16px;
-    font-weight: 400;
+    font-size: var(--font-size-md);
     font-family: Roboto-Regular;
-    color: #3A3A3A;
+    color: var(--color-grey);
     background-color: #F9F9F9;
     border-radius: 8px;
     list-style: none;
