--- a/src/ui components/Sidebar/Sidebar.css
+++ b/src/ui components/Sidebar/Sidebar.css
@@ -9,7 +9,7 @@
 }
 
 .sidebar.extended .sidebar-nav .nav-item.active {
-    border-left: 3px solid #375FFF;
+    border-left: 3px solid var(--primary-color);
     transition: border-left 0.1s ease-in-out;
 }
   
@@ -108,7 +108,7 @@
     border-radius: 4px;
     cursor: pointer;
     font-family: Raleway-Medium;
-    font-size: 14px;
+    font-size: var(--font-size-sm);
     transition: background-color 0.2s ease;
     display: flex;
     align-items: center;
@@ -117,9 +117,9 @@
 }
 
 .logout-text {
-    font-size: 16px;
+    font-size: var(--font-size-md);
     font-family: Roboto-Regular;
-    color: #3A3A3A;
+    color: var(--color-grey);
     flex: 1;
     text-align: left;
 }
@@ -182,10 +182,10 @@
 }
   
 .nav-text {
-    font-size: 16px;
+    font-size: var(--font-size-md);
     font-family: Raleway-Medium;
     line-height: 120%;
-    color: #3A3A3A;
+    color: var(--color-grey);
     opacity: 1;
     transition: opacity 0.2s ease-in-out;
 }
@@ -205,7 +205,7 @@
 }
 
 .nav-item.active .nav-text {
-    color: #375FFF;
+    color: var(--primary-color);
 }
 
 @media (min-width: 1201px) {
