--- a/src/ui components/BasicButton/BasicButton.css
+++ b/src/ui components/BasicButton/BasicButton.css
@@ -23,3 +23,20 @@
         cursor: default;
     }
 }
+
+.basic-white-button {
+    width: inherit;
+    border: 2px solid #204CFF;
+    border-radius: 8px;
+    background-color: white;
+    cursor: pointer;
+    color: #204CFF;
+    font-size: var(--font-size-md);
+    font-family: Raleway-Regular;
+    padding: 15px 25px;
+    text-transform: uppercase;
+
+    &:disabled {
+        cursor: not-allowed;
+    }
+}
