--- a/src/ui components/RegistrationModal/RegistrationModal.css
+++ b/src/ui components/RegistrationModal/RegistrationModal.css
@@ -100,3 +100,13 @@
         }
     }
 }
+
+@media (max-width: 375px) {
+    .modal-buttons { 
+        flex-direction: column;
+    }
+
+    .modal-title {
+        font-size: var(--font-size-md);
+    }
+}
