--- a/src/pages/AdminUsersPage/AdminUsersPage.css
+++ b/src/pages/AdminUsersPage/AdminUsersPage.css
@@ -34,7 +34,68 @@
 }
 
 .admin-users-page-content {
+    margin: 20px 30px 0 0;
+}
 
+.admin-users-page-content-search {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.admin-users-page-content-search-up {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+
+    .basic-input-container {
+        width: 80%;
+    }
+
+    .basic-button {
+        width: 20%;
+    }
+}
+
+.admin-users-page-content-search-down {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.admin-users-page-content-search-down-display-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 17px;
+
+    img {
+        width: 20px;
+        cursor: pointer;
+    }
+}
+
+.admin-users-content {
+    margin-top: 35px;
+
+    &.column {
+        display: flex;
+        flex-direction: column;
+    }
+
+    &.grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+        width: 100%;
+    }
+}
+
+.admin-users-page .pagination-btn.active-blue,
+.admin-users-page .pagination-btn:disabled {
+    color: var(--primary-color);
 }
 
 @media (max-width: 1200px) {
